feat(user): add endpoint for getting all users
