# protobuf/swagger/protobuf/api/user.swagger.json
@@ -17,6 +17,20 @@
   ],
   "paths": {
     "/v1/users": {
+      "get": {
+        "operationId": "GetUsers",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/mughieams.evermosassessment.v1.GetUsersResponse"
+            }
+          }
+        },
+        "tags": [
+          "mughieams.evermosassessment.v1.UserService"
+        ]
+      },
       "post": {
         "operationId": "Register",
         "responses": {
@@ -70,6 +84,18 @@
     }
   },
   "definitions": {
+    "mughieams.evermosassessment.v1.GetUsersResponse": {
+      "type": "object",
+      "properties": {
+        "users": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/mughieams.evermosassessment.v1.User"
+          }
+        }
+      }
+    },
     "mughieams.evermosassessment.v1.LoginRequest": {
       "type": "object",
       "properties": {
@@ -117,6 +143,21 @@
           "type": "string"
         },
         "password": {
+          "type": "string"
+        }
+      }
+    },
+    "mughieams.evermosassessment.v1.User": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "email": {
+          "type": "string"
+        },
+        "phone": {
           "type": "string"
         }
       }
